Fix gap in slides

--- a/projects/srm/src/app/homepage/homepage.component.less
+++ b/projects/srm/src/app/homepage/homepage.component.less
@@ -137,7 +137,7 @@
                 padding: 0 16px;
                 display: flex;
                 flex-flow: row;
-                gap: 16px;
+                gap: 32px;
                 align-items: flex-start;
                 width: 100%;
                 overflow-x: scroll;
